mobile and tablet media queries display a left shift in the carousel after previous commit to fix the carousel on desktop and laptops. This has been fixed by removing the margin at the first tablet media query.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,8 +350,6 @@ border-radius: 50%;
 
 .bucks {
     margin-left: 30px;
-    width:100px;
-    height: 200px;
 }
 
 /*----------- members.html----*/
@@ -476,6 +474,7 @@ margin: 5px 8px;
     margin: 0px;
 }
 
+/*--- credit to banzomaikaka (solution comment on https://www.xspdf.com/help/50382383.html) for text overlay and hover code ---*/
 .text-overlay {
   position:relative;  
   height: 45px;
@@ -668,6 +667,7 @@ margin: 5px 8px;
     .carousel-item {
         height: 32rem;
         width: 100%;
+        margin: 0px;
     }
 
     .carousel-item img {
